<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jsleep"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".21"
        />
    <EditText
        android:id="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:inputType="textEmailAddress"
        android:hint="@string/username"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias=".6"
        android:autofillHints="" />
    <Button
        android:id="@+id/loginButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias=".8"
        android:layout_width="150dp"
        android:layout_height="70dp"
        />
    <TextView
        android:id="@+id/dontHaveAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_account"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintVertical_bias=".87"
        />
    <Button
        android:id="@+id/registerNow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_now"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:textSize="15sp"
        android:textColor="@color/cardview_dark_background"
        android:textStyle="bold"
        app:layout_constraintVertical_bias=".95"/>


</androidx.constraintlayout.widget.ConstraintLayout>
